added necessary dependencies